tests/snapshots/deserializer__uint8clampedarray_one_byte.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew Uint8ClampedArray([1])"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            1,
        ],
        max_byte_length: None,
    },
    1: ArrayBufferView {
        kind: Uint8ClampedArray,
        buffer: *0,
        byte_offset: 0,
        length: 1,
        is_length_tracking: false,
        is_backed_by_rab: false,
    },
}

