tests/snapshots/deserializer__undefined.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nundefined"
---
=== VALUE ===
Undefined

=== HEAP ===
Heap {}

